--- a/基于注解的控制器.md
+++ b/基于注解的控制器.md
@@ -1,1 +1,15 @@
+# :cherry_blossom:基于注解的控制器 #
+
+:arrow_down:[Spring MVC 注解类型 ](#a1)
+
+
+<p id="a1"></p>
+
+### :tulip:Spring MVC 注解类型 ###
+
+使用注解器有几个优点，一是，一个控制器类可以处理多个动作（而一个是实现了Controller接口的控制器只能处理一个动作），这就允许将相关的操作写在同一个控制器类中，从而减少应用程序中类的数量。
+
+其二，基于注解的控制器的请求映射不需要存储在配置文件中，使用RequestMapping注解类型，可以对一个方法进行请求处理。
+
+Controller和RequestMapping注解是Spring MVC API 最重要的两个注解类型。主要介绍这两个的使用。
 
