--- a/视图定位.md
+++ b/视图定位.md
@@ -1,1 +1,72 @@
+# :hotsprings: 视图定位 #
+
+**所谓视图定位就是就是指跳转页面，通常我们写的全路径名：**
+
+```java
+	public ModelAndView handleRequest(HttpServletRequest request, HttpServletResponse response) throws Exception
+	{
+		ModelAndView mav = new ModelAndView("index.jsp");
+		mav.addObject("message", "Hello Spring MVC");
+		return mav;
+	}
+```
+
+上面的index.jsp指的是主目录下的index.jsp文件，如果我们添加视图定位，就可以指定转到一定目录下：
+
+如下目录形式：
+
+![](https://github.com/Lumnca/Spring-MVC/blob/master/img/a4.png)
+
+如上如果想通过文件名（不加扩展名）访问，就需要一个视图定位处理。首先在dispatcher-servlet.xml配置文件中添加如下内容：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd">
+        <bean name="index" class="controller.IndexController"></bean>
+        <bean id="simpleUrlHandlerMapping"
+              class="org.springframework.web.servlet.handler.SimpleUrlHandlerMapping">
+            <property name="mappings">
+                <props>
+                    <prop key="/index">index</prop>
+                </props>
+            </property>
+        </bean>
+        <!--视图定位器-->
+        <bean id="view" class="org.springframework.web.servlet.view.InternalResourceViewResolver">
+            <property  name="suffix" value=".jsp"/>
+            <property name="prefix" value="/WEB-INF/jsp/"/>
+        </bean>
+</beans>
+```
+
+在下面的代码片段为视图定位，需要引用:`org.springframework.web.servlet.view.InternalResourceViewResolver`包，然后就是suffix属性决定文件扩展名
+prefix属性是文件所在的目录。像这样使用的index就会由/WEB-INF/jsp/+文件名+.jsp组成访问的路径。上面是我们的访问的控制器处理，在控制器中修改如下代码：
+
+```java
+public class IndexController implements Controller {
+	public ModelAndView handleRequest(HttpServletRequest request, HttpServletResponse response) throws Exception
+	{
+  //index
+		ModelAndView mav = new ModelAndView("index");
+		mav.addObject("message", "Hello Spring MVC");
+		return mav;
+	}
+}
+```
+
+如上面我们使用的是index名称，这个会被像上面所说的那样组成一个完整路径：/WEB-INF/jsp/+index+.jsp也就是`/WEB-INF/jsp/indexjsp`，通过这样就可以视图定位。 输入网址`http://localhost:8080/mvcProgram/index`即可访问该页面。
+
+视图定位是一种快捷的访问视图的形式，不需要我们提供完整的路径名。只需要在配置文件中添加一个视图组件即可。
+
+
+
+
+
+
+
+
+
+
 
