--- a/基于注解的控制器.md
+++ b/基于注解的控制器.md
@@ -13,3 +13,151 @@
 
 Controller和RequestMapping注解是Spring MVC API 最重要的两个注解类型。主要介绍这两个的使用。
 
+**:chart:1.Controller 注解类型**
+
+org.springframework.stereotype.Controller注解类型用于指示Spring类的实例是一个控制器.前面所用控制器需要在配置文件中添加一个组件来索引请求控制器：
+
+```xml
+<bean id="simpleUrlHandlerMapping"
+      class="org.springframework.web.servlet.handler.SimpleUrlHandlerMapping"> -->
+      <property name="mappings"> 
+            <props> 
+                    <prop key="/index">indexController</prop> -->
+            </props> 
+      </property> 
+</bean> 
+<bean id="indexController" class="controller.IndexController"></bean> -->
+ ```
+ 
+上面是一个对路径/index的处理器配置声明，可以看出/index交给了controller.IndexController这个类处理，并且这个类还要实现Controller类的接口，每一个控制器，就需要添加一个，这样使得配置文件复杂，使用注解就不需要再使用配置文件来规定控制器，下面是一个带注解@Controller的例子：
+
+```java
+package controller;
+
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.servlet.ModelAndView;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+@Controller
+public class example {
+    @RequestMapping(value = "/example")
+    public ModelAndView handleRequest(HttpServletRequest request, HttpServletResponse response) throws Exception
+    {
+        ModelAndView example = new ModelAndView("example");
+        example.addObject("message", "Example View!");
+        return example;
+    }
+}
+```
+
+可以看到这个类并没有继承接口，而是通过了一个类，加上一个@Controller注解，即实现控制器类。当然我们需要一个扫描器来获取这些通过注解实现的类，在配置文件中添加：
+
+```xml
+ <context:component-scan base-package="controller"/>
+```
+
+ base-package指向的是使用控制器的上一级包，也就是包含这个包下所有的类。
+
+添加这个标签的前提是需要在beans中添加`xmlns:context="http://www.springframework.org/schema/context"`值，同时补全xsi:schemaLocation中内容，如下所示：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans
+        http://www.springframework.org/schema/beans/spring-beans.xsd
+        http://www.springframework.org/schema/context
+        http://www.springframework.org/schema/context/spring-context-3.0.xsd"
+       xmlns:context="http://www.springframework.org/schema/context">
+        <context:component-scan base-package="controller"/>
+        <bean id="view" class="org.springframework.web.servlet.view.InternalResourceViewResolver">
+            <property  name="suffix" value=".jsp"/>
+            <property name="prefix" value="/WEB-INF/jsp/"/>
+        </bean>
+</beans>
+```
+
+像这样就可以完成扫描注解类的控制器。那么怎样才能指定到规定的控制器呢？这就是下面的RequestMapping注解。
+
+**:chart:2.RequestMapping 注解类型**
+
+前面也看到这个注解类型，这个注解就是请求的控制器的索引，需要使用import org.springframework.web.bind.annotation.RequestMapping包，并在方法上使用
+@RequestMapping(value = "/访问索引")即可映射到该索性下。value属性是索引值，可以省略该值：@RequestMapping("/访问索引")也可以达到一样的效果:
+
+```java
+package controller;
+
+
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.servlet.ModelAndView;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+@Controller
+public class example {
+    @RequestMapping(value = "/example")
+    public ModelAndView handleRequest(HttpServletRequest request, HttpServletResponse response) throws Exception
+    {
+        ModelAndView example = new ModelAndView("example");
+        example.addObject("message", "Example View!");
+        return example;
+    }
+    @RequestMapping("/new")
+    public  ModelAndView newView(){
+        ModelAndView index = new ModelAndView("index");
+        index.addObject("message","New Index !!!");
+        return index;
+    }
+}
+```
+
+在请求为/new或者/example，都会显示不一样的信息，通过这样的形式我们将请求放在每一个方法上。对于RequestMapping注解还有对不同形式处理方法的属性，如：
+
+```java
+    @RequestMapping(value = "/new",method = {RequestMethod.GET,RequestMethod.POST})
+    public  ModelAndView newView(){
+        ModelAndView index = new ModelAndView("index");
+        index.addObject("message","New Index !!!");
+        return index;
+    }
+```
+
+上面表示当请求为GET或者POST才会执行该方法。，如果只有一个方法，就不需要花括号。没有指定method值，即表示任何形式都可以访问该方法。RequestMapping注解也可以直接注解一个控制器类，再在方法上加上注解，表示两级路径访问：
+
+```java
+
+@Controller
+@RequestMapping(value = "/example")
+public class example {
+    @RequestMapping(value = "/hello")
+    public ModelAndView hello()
+    {
+        ModelAndView example = new ModelAndView("example");
+        example.addObject("message", "Hello!");
+        return example;
+    }
+    @RequestMapping(value = "/bye")
+    public  ModelAndView bye(){
+        ModelAndView index = new ModelAndView("index");
+        index.addObject("message","Good Bye!");
+        return index;
+    }
+}
+```
+
+如上面通过/example/hello和/example/bye来访问不同的页面。
+
+
+
+
+
+
+
+
+
+
