--- a/基于注解的控制器.md
+++ b/基于注解的控制器.md
@@ -2,6 +2,9 @@
 
 :arrow_down:[Spring MVC 注解类型 ](#a1)
 
+:arrow_down:[编写请求处理方法](#a2)
+
+:arrow_down:[应用基于注解的控制器](#a3)
 
 <p id="a1"></p>
 
@@ -152,12 +155,73 @@ public class example {
 
 如上面通过/example/hello和/example/bye来访问不同的页面。
 
+<p id="a2"></p>
 
+### :tulip:编写请求处理方法 ###
 
+在前面的控制方法中，我们可以看到方法参数有其他值，这和servelt一样，使用不同参数可以访问一些请求对象：
 
+```java
+ public ModelAndView hello(HttpServletRequest request,HttpServletResponse response)
+    {
+        ModelAndView example = new ModelAndView("example");
+        example.addObject("message", request.getContextPath());
+        example.addObject("res",response.getStatus());
+        return example;
+    }
+```
 
+他们的使用方法与Servlet一致，同时支持的还有HttpSession，Write等Servlet含有的MVC控制器一样都有。如下是一个表单的验证：
 
+登录页面login.jsp:
 
+```jsp
+<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<html>
+<head>
+    <title>登录</title>
+</head>
+<body>
+
+    <p>${message}</p>
+    <form action="login" method="get">
+        <label>ID</label>
+       <input type="text" name="id" ><br>
+        <label>密码</label>
+        <input type="password" name="pw"><br>
+        <input type="submit" value="登录">
+    </form>
+</body>
+</html>
+```
+
+请求控制器login：
+
+```java
+    @RequestMapping(value = "login")
+    public  ModelAndView login(HttpServletRequest request,HttpServletResponse response){
+        ModelAndView index = new ModelAndView("index");
+        ModelAndView login = new ModelAndView("login");
+        index.addObject("message","登录成功！");
+
+        String id = request.getParameter("id").trim();
+        String pw = request.getParameter("pw").trim();
+
+        if(id.equals("ABC")&&pw.equals("123456")){
+            return index;
+        }
+        else {
+            login.addObject("message","用户名或密码错误！");
+            return login;
+        }
+    }
+```
+
+我们可以看到，如果输入符合，就会跳转到index界面，如果不满足则会重新跳转到login界面输出错误信息继续登录。这与servelt和jsp还是一样的原理。
+
+<p id="a3"></p>
+
+### :tulip:应用基于注解的控制器 ###
 
 
 
