--- a/基于注解的控制器.md
+++ b/基于注解的控制器.md
@@ -165,6 +165,8 @@ public class example {
 
 ### :tulip:编写请求处理方法 ###
 
+:arrow_up:[返回目录](#tit)
+
 在前面的控制方法中，我们可以看到方法参数有其他值，这和servelt一样，使用不同参数可以访问一些请求对象：
 
 ```java
