--- a/基于注解的控制器.md
+++ b/基于注解的控制器.md
@@ -233,3 +233,50 @@ public class example {
 
 :arrow_up:[返回目录](#tit)
 
+**:bookmark_tabs:文件目录**
+
+在创建MVC后的文件目录一般如下：
+
+![](https://github.com/Lumnca/Spring-MVC/blob/master/img/a5.png)
+
+lib为配置文件，out为输出文件夹，src下一般是我们要存放的控制器类以及类代码等，web文件下为实际web的目录，它包括下面的目录为实际的web访问目录。web.xml
+为部署描述符，其中注册了Spring MVC的Dispatcher Servlet。第二个为springmvc-config.xml，即Spring 的配置文件。
+
+首先看下web.xml文件：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/applicationContext.xml</param-value>
+    </context-param>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+    <servlet>
+        <servlet-name>dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+</web-app>
+```
+
+该文件主要是规定了dispatcher和contextConfigLocation的位置与名称，我们要注意一下的是：
+
+```xml
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+```
+
+这里的url映射请求是/代表的是将所有的请求（包括静态资源如html，css，text，png等文件请求）都会被映射到dispatcher sevlet，如果要访问
+
