--- a/基于注解的控制器.md
+++ b/基于注解的控制器.md
@@ -376,6 +376,127 @@ Model主要目的是添加需要在视图中显示的属性，添加的属性和
 
 使用Spring框架最好的一点就是进行依赖注入，将依赖注入到mvc最简单的方法就是通过注解@Autowired到字段或方法，他属于`org.springframework.beans.factory.annotation.Autowired`包，此外为了能够作为依赖注入，类必须要注明为@Service。该类型是`org.springframework.stereotype.Service`包。Service注解类型指示类需要添加一个`<context:component-scan base-package="Classes"/>`标签用于扫描。
 
+使用依赖注入，可以减少代码耦合，用接口表示连接关系：
+
+首先是接口类：
+
+```java
+package Classes;
+
+public interface Login {
+    User getUser(int no);
+    void addUser(User user);
+}
+```
+
+其次就是接口的实现类：
+
+```java
+package Classes;
+
+import org.springframework.stereotype.Service;
+
+import java.util.ArrayList;
+import java.util.List;
+
+@Service
+public class UserList implements Login{
+
+    private List<User> userList;
+
+    public  UserList(){
+        userList = new ArrayList<>();
+        userList.add(new User("abc","112233"));
+        userList.add(new User("adc","123456"));
+        userList.add(new User("add","123456"));
+    }
+
+    public List<User> getUserList() {
+        return userList;
+    }
+
+    public void setUserList(List<User> userList) {
+        this.userList = userList;
+    }
+
+    @Override
+    public User getUser(int no) {
+            return userList.get(no);
+    }
+    @Override
+    public void addUser(User user) {
+            userList.add(user);
+    }
+}
+```
+
+然后就是控制器类：
+
+```java
+package controller;
+
+
+import Classes.Login;
+import Classes.User;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.servlet.ModelAndView;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
+
+@Controller
+public class example {
+
+    @Autowired
+    private Login login;
+
+    @RequestMapping(value = "/example")
+    public ModelAndView hello()
+    {
+        ModelAndView example = new ModelAndView("login");
+        return example;
+    }
+    @RequestMapping(value = "/login")
+    public  String login(HttpServletRequest request, Model model){
+        String id = request.getParameter("id").trim();
+        String pw = request.getParameter("pw").trim();
+
+        login.addUser(new User(id,pw));
+
+        model.addAttribute("message",login.getUser(1));
+
+        return "index";
+    }
+}
+```
+
+最后在index界面显示数据：
+
+```jsp
+<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<html>
+  <head>
+    <title>$Title$</title>
+  </head>
+  <body>
+        <p>${message.id}+${message.password}</p>
+  </body>
+</html>
+```
+
+注意配置文件中添加扫描注解：
+
+```xml
+        <context:component-scan base-package="controller"/>
+        <context:component-scan base-package="Classes"/>
+```
+
+运行输入即可看到所示数据，要点是第一接口实现类要有@Service注解，其次就是引用接口注意添加@Autowired接口。像这样就可以不通过实现接口直接引用实现类。减少了代码耦合。
 
 
 
