--- a/基于注解的控制器.md
+++ b/基于注解的控制器.md
@@ -10,6 +10,8 @@
 
 :arrow_down:[依赖注入注解](#a4)
 
+:arrow_down:[重定向和flash属性](#a5)
+
 <p id="a1"></p>
 
 ### :tulip:Spring MVC 注解类型 ###
@@ -498,8 +500,31 @@ public class example {
 
 运行输入即可看到所示数据，要点是第一接口实现类要有@Service注解，其次就是引用接口注意添加@Autowired接口。像这样就可以不通过实现接口直接引用实现类。减少了代码耦合。
 
+<p id="a5"></p>
 
+### :tulip:重定向和Flash属性 ###
 
+:arrow_up:[返回目录](#tit)
+
+使用重定向的场景是避免在用户重新加载页面时调用同样的动作。重定向和转发有一个重要的不同：当使用转发时，JSP容器将使用一个内部的方法来调用目标页面，新的页面继续处理同一个请求，而浏览器将不会知道这个过程。 与之相反，重定向方式的含义是第一个页面通知浏览器发送一个新的页面请求。因为，当你使用重定向时，浏览器中所显示的URL会变成新页面的URL, 而当使用转发时，该URL会保持不变。重定向的速度比转发慢，因为浏览器还得发出一个新的请求。同时，由于重定向方式产生了一个新的请求，所以经过一次重定向后，request内的对象将无法使用。
+
+怎么选择是重定向还是转发呢？通常情况下转发更快，而且能保持request内的对象，所以他是第一选择。但是由于在转发之后，浏览器中URL仍然指向开始页面，此时如果重载当前页面，开始页面将会被重新调用。如果你不想看到这样的情况，则选择转发。
+
+**转发和重定向的区别**
+
+不要仅仅为了把变量传到下一个页面而使用session作用域，那会无故增大变量的作用域，转发也许可以帮助你解决这个问题。
+
+* 重定向：>以前的request中存放的变量全部失效，并进入一个新的request作用域。
+
+```java
+      response.sendRedirect("success.jsp");
+```
+
+* 转发：>以前的request中存放的变量不会失效，就像把两个页面拼到了一起。
+
+```java
+      request.getRequestDispatcher("success.jsp").forward(request,response);
+```
 
 
 
