--- a/基于注解的控制器.md
+++ b/基于注解的控制器.md
@@ -12,6 +12,10 @@
 
 :arrow_down:[重定向和flash属性](#a5)
 
+:arrow_down:[请求参数和路径变量](#a6)
+
+:arrow_down:[@ModelAttribute](#a7)
+
 <p id="a1"></p>
 
 ### :tulip:Spring MVC 注解类型 ###
@@ -514,17 +518,114 @@ public class example {
 
 不要仅仅为了把变量传到下一个页面而使用session作用域，那会无故增大变量的作用域，转发也许可以帮助你解决这个问题。
 
-* 重定向：>以前的request中存放的变量全部失效，并进入一个新的request作用域。
+* 重定向：以前的request中存放的变量全部失效，并进入一个新的request作用域。对于JSP和servelt：
 
 ```java
       response.sendRedirect("success.jsp");
 ```
 
-* 转发：>以前的request中存放的变量不会失效，就像把两个页面拼到了一起。
+* 转发：以前的request中存放的变量不会失效，就像把两个页面拼到了一起。对于JSP和servelt：
 
 ```java
       request.getRequestDispatcher("success.jsp").forward(request,response);
 ```
+
+在我们mvc中我们通常采用模型来传值，但是这个值只能在模型所对应的界面显示，通常想的是使用session来在所有页面传递，但是数据过多会导致问题。
+
+RedirectAttributes是Spring mvc 3.1版本之后出来的一个功能，专门用于重定向之后还能带参数跳转的，它有两种带参的方法添加值：
+
+* addAttribute("param", Object) ：这种方式就相当于重定向之后，在url后面拼接参数，这样在重定向之后的页面或者控制器再去获取url后面的参数就可以了，但这个方式因为是在url后面添加参数的方式，所以暴露了参数，有风险
+
+* addFlashAttribute("param",Object); ： 这种方式也能达到重新向带参，而且能隐藏参数，其原理就是放到session中，session在跳到页面后马上移除对象。所以重新刷新页面就会消失。
+
+如下是一个接受表单数据并在index界面显示的方法
+
+```java
+    @RequestMapping(value = "/login" ,method = RequestMethod.GET)
+    public  String login(HttpServletRequest request, RedirectAttributes attributes){
+        String id = request.getParameter("id").trim();
+        String pw = request.getParameter("pw").trim();
+        attributes.addFlashAttribute("id",id);
+        attributes.addFlashAttribute("pw",pw);
+        return "redirect:/index";        //添加redirect:
+    }
+```
+
+使用Flash属性之前需要在配置文件含有`<mvc:annotation-driven/>`元素
+
+在主页使用el就可访问到这个数据，注意刷新页面值消失！这种方法适用于返回提示信息，显示一次后消失，或者只能使用一次的值。
+
+<p id="a6"></p>
+
+### :tulip:Spring MVC 注解类型 ###
+
+:arrow_up:[返回目录](#tit)
+
+请求参数和路径变量都可以用于发送值给服务器，二者都是URL的一部分，请求参数用key = value形式并用&分隔，如下：
+
+`https://www.sogou.com/tx?query=mvc?id=5523`
+
+在传统的Servlet编程中，可以使用HTTPServletRequest的getParameter方法来获取一个请求参数值：`request.getParameter("id")` 在MVC中提供了更简单的取值方式，通过org.springframework.web.bind.annotation.RequestParam,添加@RequestParam注解可以直接获取这个值。
+
+```java
+    @RequestMapping(value = "/login" ,method = RequestMethod.GET)
+    public  String login(@RequestParam String id, String pw, Model model){
+        model.addAttribute("id",id);
+        model.addAttribute("pw",pw);
+        return "index";
+    }
+```
+
+**使用路径变量**
+
+请求参数使用?后接参数形式来给变量赋值，还有一种就是使用占位符来获取值，@PathVariable可以获取占位符的值：
+
+```java
+    @RequestMapping(value = "/login/{id}/{pw}")
+    public  String login(@PathVariable String id,@PathVariable String pw, Model model){
+        model.addAttribute("id",id);
+        model.addAttribute("pw",pw);
+        return "index";
+    }
+```
+
+向上面所示一样，/login 后面可以添加两个占位符变量，用于获取变量，如下
+
+`http://localhost:8080/mvcProgram/login/ts/515`
+
+就会获取到ts和515的数据信息，{}中的名称为自定义变量，用于表示占位符的名称，这个名称可以在方法中访问。所以上面最后就会被解析为id=ts，pw=515
+
+<p id="a7"></p>
+
+### :tulip:@ModelAttribute ###
+
+:arrow_up:[返回目录](#tit)
+
+前面说过我们可以使用model来给页面赋值，需要定义一个model变量再使用相应方法来添加键值对属性。现在可以使用@ModelAttribute注解来直接添加，如下：
+
+```java
+    @RequestMapping(value = "/login" ,method = RequestMethod.GET)
+    public  String login(@ModelAttribute("id") String id,@ModelAttribute("pw") String pw, Model model){
+        return "index";
+    }
+```
+
+这样id与pw的值会直接加到model中去，在访问的时候也只需要使用el表达式即可。这里值得说明的一点是，我们这里没有获取id，pw的参数值，是因为这个注解会自动调用@RequestParam注解。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
