--- a/基于注解的控制器.md
+++ b/基于注解的控制器.md
@@ -557,7 +557,7 @@ RedirectAttributes是Spring mvc 3.1版本之后出来的一个功能，专门用
 
 <p id="a6"></p>
 
-### :tulip:Spring MVC 注解类型 ###
+### :tulip:请求参数和路径变量 ###
 
 :arrow_up:[返回目录](#tit)
 
@@ -610,7 +610,7 @@ RedirectAttributes是Spring mvc 3.1版本之后出来的一个功能，专门用
     }
 ```
 
-这样id与pw的值会直接加到model中去，在访问的时候也只需要使用el表达式即可。这里值得说明的一点是，我们这里没有获取id，pw的参数值，是因为这个注解会自动调用@RequestParam注解。
+这样id与pw的值会直接加到model中去，在访问的时候也只需要使用el表达式即可。这里值得说明的一点是，我们这里没有获取id，pw的参数值，而是通过方法的两个参数来对应获取到了url后面的两个值。
 
 
 
