--- a/数据绑定和表单库标签.md
+++ b/数据绑定和表单库标签.md
@@ -1,1 +1,48 @@
+# :earth_africa:数据绑定和表单库标签 #
+
+所谓数据绑定就是指一个值赋给某个变量，或者是一个对象。常用的可以用表单标签来绑定一个值。
+
+### :partly_sunny:表单标签库 ###
+
+表单标签库中包含了可以用在JSP页面中渲染HTML元素的标签，为了使用这些标签，必须在JSP页面的开头处声明这个taglib指令：
+
+```jsp
+<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
+```
+
+添加了这条指令后就可以使用表单绑定数据，可以对form标签添加如下属性
+
+|属性|说明|
+|:-|:-|
+|acceptCharst|服务器接受的字符编码列表|
+|commandName|显示表单对象之模型属性的名称，默认为command|
+|cssClass|定义要应用到被渲染form元素的Css类|
+|cssStyle|定义要应用到被渲染form元素的Css样式|
+|htmlEscape|参数为true或者false，表示被渲染的值是否应该进行HTML转义|
+|modelAttribute|显示form backing Object 的模型属性名称。默认为command|
+
+如下所示,为login界面的代码：
+
+```html
+    <form:form action="login" method="get" commandName="user">
+        <label>ID</label>
+       <input type="text" name="id" ><br>
+        <label>密码</label>
+        <input type="password" name="pw"><br>
+        <input type="submit" value="登录">
+    </form:form>
+```
+
+其中form:form代表启用html渲染。commandName="user"代表表单整个值都会绑定到user这个对象上。前提是在该页面前需要有一个数据模型渲染：
+
+```java
+    @RequestMapping(value = "/example")
+    public String index(Model model){
+        model.addAttribute("user");
+        return "login";
+    }
+```
+
+如果没有这个则login界面会报错。因为command无法找到user这个变量。
+
 
