--- a/数据绑定和表单库标签.md
+++ b/数据绑定和表单库标签.md
@@ -45,4 +45,101 @@
 
 如果没有这个则login界面会报错。因为command无法找到user这个变量。
 
+所以我们可以使用标签库：
+
+User类：
+
+```java
+package Classes;
+public class User {
+   private String id;
+   private String password;
+
+   public User(){
+
+   }
+   public User(String _id,String _pw){
+       id = _id;
+       password = _pw;
+   }
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public String getId() {
+        return id;
+    }
+
+    public void setPassword(String password) {
+        this.password = password;
+    }
+
+    public String getPassword() {
+        return password;
+    }
+}
+```
+
+
+```java
+@Controller
+public class example {
+
+    @RequestMapping(value = "/example")
+    public String index(Model model){
+        model.addAttribute("user",new User());
+        return "login";
+    }
+    @RequestMapping(value = "/login" ,method = RequestMethod.GET)
+    public  String login(User user,Model model){
+        model.addAttribute("user",user);
+        return "index";
+    }
+}
+```
+
+在login界面：
+
+```jsp
+<body>
+    <form:form action="login" method="get" commandName="user">
+        <label>ID</label>
+        <form:input path="id"/><br>
+        <label>密码</label>
+        <form:password path="password"/>
+        <input type="submit" value="登录">
+    </form:form>
+</body>
+```
+
+最后在index界面访问：
+
+```jsp
+  <body>
+      <h2>${user.id}+${user.password}</h2>
+  </body>
+```
+
+像这样就可以直接绑定属性值到User对象上。对于表单每个表单选项都有自己的选项：
+
+共同选项：
+
+|属性|说明|
+|:--|:--|
+|acceptCharst|服务器接受的字符编码列表|
+|cssClass|定义要应用到被渲染form元素的Css类|
+|cssStyle|定义要应用到被渲染form元素的Css样式|
+|htmlEscape|参数为true或者false，表示被渲染的值是否应该进行HTML转义|
+|path|表示所要绑定的值|
+
+特有属性：
+
+password标签： showPassword属性代表是否显示或遮盖密码。默认值为false。
+
+checkbox和radiobutton标签： label属性代表要作为label用于渲染复选框的值。
+
+
+
+
+
 
