--- a/转换器和格式化.md
+++ b/转换器和格式化.md
@@ -1,1 +1,107 @@
+# :dolphin:转换器和格式化 #
+
+MVC中的Converter和Formatter可以将一种对象类型转换为另一种类型数据Converter是通用元件，可以在应用程序中任意层使用，而Formatter则是专为Web层使用。
+
+:arrow_down:[Converter](a1)
+
+:arrow_down:[Formatter](a2)
+
+<p id="#a1"></p>
+
+### :whale:Converter ###
+
+Spring的Converter是一个可以将一种类型转换为另一种类型的对象，例如将用户在表单输入的字符串转换为日期，就可以使用这个对象，当然我们知道日期转换java已经提供了方法实现，但是如果有很多数据，则需要多次使用转换方式，但是使用Converter不需要再调用方法转换，而是在输入的时候直接转换。
+
+为了创建Converter，必须实现编写一个实现了Converter<S,T>接口的类，其中S表示原类型，T为要转化为的类型。，下面展示了一个将输入转换为日期的实例：
+
+```java
+package Classes;
+
+import org.springframework.core.convert.converter.Converter;
+
+import java.text.SimpleDateFormat;
+import java.util.Date;
+
+public class StringToDate implements Converter<String, Date> {
+
+    private String str;
+    public StringToDate(String s){
+        str = s;
+    }
+    @Override
+    public Date convert(String s) {
+        try {
+            //str为要转换的格式
+            SimpleDateFormat dateFormat = new SimpleDateFormat(str);
+            dateFormat.setLenient(false);
+            return dateFormat.parse(s);
+        }
+        catch (Exception e){
+            e.printStackTrace();
+            throw new IllegalArgumentException("格式错误！");
+        }
+
+    }
+}
+```
+
+然后就是在mvc中添加的配置：
+
+```xml
+        <mvc:annotation-driven conversion-service="conversion"/>
+        <bean id="conversion" class="org.springframework.context.support.ConversionServiceFactoryBean">
+            <property name="converters">
+                <list>
+                    <bean class="Classes.StringToDate">
+                        <constructor-arg type="java.lang.String" value="MM-dd-yyyy"/>
+                    </bean>
+                </list>
+            </property>
+        </bean>
+```
+
+conversion-service="conversion"对应的是bean的名称，也就是下面的bean的id。class="Classes.StringToDate"代表你的转换类。value="MM-dd-yyyy"就是上面类的str值，也就是接受转换的类型。
+
+控制器：
+
+```java
+@Controller
+public class example {
+
+    @RequestMapping(value = "/example")
+    public String index(Model model){
+       model.addAttribute("user",new User());
+        return "login";
+    }
+    @RequestMapping(value = "/login" ,method = RequestMethod.GET)
+    public  String login(User user,Model model){
+        model.addAttribute("user",user);
+        return "index";
+    }
+}
+```
+
+
+login界面：
+
+```jsp
+<body>
+<form:form commandName="user" action="login" method="get">
+    Name :<form:input path="id"/><br>
+    Birth:<form:input path="birth"/><br>
+    <input type="submit" value="提交">
+</form:form>
+</body>
+```
+
+index界面：
+
+```jsp
+<body>
+      <h2>Name:${user.id} ----  Birth:${user.birth.year+1900}/${user.birth.month}/${user.birth.date}</h2>
+</body>
+```
+
+运行在表单输入所支持的日期格式MM-dd-yyyy，即可转换为对应的日期类型数据。
+
 
