--- a/转换器和格式化.md
+++ b/转换器和格式化.md
@@ -2,9 +2,9 @@
 
 MVC中的Converter和Formatter可以将一种对象类型转换为另一种类型数据Converter是通用元件，可以在应用程序中任意层使用，而Formatter则是专为Web层使用。
 
-:arrow_down:[Converter](a1)
+:arrow_down:[Converter](#a1)
 
-:arrow_down:[Formatter](a2)
+:arrow_down:[Formatter](#a2)
 
 <p id="a1"></p>
 
