--- a/转换器和格式化.md
+++ b/转换器和格式化.md
@@ -104,4 +104,30 @@ index界面：
 
 运行在表单输入所支持的日期格式MM-dd-yyyy，即可转换为对应的日期类型数据。
 
+当然要符合格式才能转换成功，当然也可以使用BindingResult来处理错误情况：
 
+```java
+    public  String login(@ModelAttribute  User user,BindingResult bindingResult ,Model model ){
+        if(bindingResult.hasErrors()){
+            FieldError error = bindingResult.getFieldError();
+            model.addAttribute("errorMessage",error.getField());
+            model.addAttribute("errorCode",error.getCode());
+            return "login";
+        }
+        model.addAttribute("user",user);
+        return "index";
+    }
+```
+
+如上输入错误，回到原始界面继续登录。bindingResult是一个处理错误的对象，hasErrors是捕获错误的方法，如下可以输出错误，或者使用error标签输出错误原因
+
+```jsp
+<p>错误信息：${errorMessage}</p>
+<p>错误代码：${errorCode}</p>
+<form:form commandName="user" action="login" method="get">
+    Name :<form:input path="id"/><br>
+    Birth:<form:input path="birth"/><br>
+    <p><form:errors path="birth"/></p>
+    <input type="submit" value="提交">
+</form:form>
+```
