--- a/转换器和格式化.md
+++ b/转换器和格式化.md
@@ -131,3 +131,112 @@ index界面：
     <input type="submit" value="提交">
 </form:form>
 ```
+
+<p id="a1"></p>
+
+### :whale:Formatter ###
+
+Formatter就像Converter一样，也是将一种类型转换为另一种类型，但是Formatter的源类型必须是String，而Converter则适用于任意的源类型，Formatter更适合Web层，而Converter则可以用于任意层，为了转换Spring MVC应用程序表单中的用户输入，始终应该选用Formatter。
+
+为了创建Formatter，需要实现Formatter接口：
+
+```java
+public interface Formatter<T>
+```
+
+T表示要转换的类型。该接口有两个方法，一是parse方法，而是print：
+
+```
+T parse(String text,java.util.Local local)
+String print(T object,java.util.Local local)
+```
+
+parse 方法利用指定的Local将一个String解析成为目标类型。print方法相反，它是返回目标对象的字符串表示法
+
+如前面一样，我们将用户输入转日期：
+
+```java
+package Classes;
+
+import org.springframework.core.convert.converter.Converter;
+import org.springframework.format.Formatter;
+
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.util.Date;
+import java.util.Locale;
+
+public class StringToDate implements Formatter<Date> {
+
+    private String str;
+
+    private SimpleDateFormat dateFormat;
+    public StringToDate(String s)
+    {
+        str = s;
+        dateFormat = new SimpleDateFormat(s);
+        dateFormat.setLenient(false);
+    }
+    @Override
+    public Date parse(String s, Locale locale) throws ParseException {
+        try {
+            return  dateFormat.parse(s);
+        }
+        catch (Exception e){
+            throw  new IllegalArgumentException();
+        }
+    }
+
+    @Override
+    public String print(Date date, Locale locale) {
+        return dateFormat.format(date);
+    }
+}
+
+```
+
+
+配置文件修改如下：
+
+```xml
+        <mvc:annotation-driven conversion-service="conversion"/>
+        <bean id="conversion" class="org.springframework.format.support.FormattingConversionServiceFactoryBean">
+            <property name="formatters">
+                <set>
+                    <bean class="Classes.StringToDate">
+                        <constructor-arg type="java.lang.String" value="yyyy--MM--dd"/>
+                    </bean>
+                </set>
+            </property>
+        </bean>
+```
+
+其余代码不变，在输入框输入yyyy--MM--dd格式才能起效。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
