--- a/验证器.md
+++ b/验证器.md
@@ -1,3 +1,159 @@
 #  :dragon_face:验证器 #
 
-前面所说的日期转换也属于验证器，但是它的使用局限，比如数据控制范围，大小，满足的正则表达式
+:arrow_double_down:[jsr303环境安装](a1)
+
+:arrow_double_down:[验证实例](a2)
+
+前面所说的日期转换也属于验证器，但是它的使用局限，比如数据控制范围，大小，满足的正则表达式。
+
+>项目中，通常使用较多的是前端的校验，比如页面中js校验以及form表单使用bootstrap校验。然而对于安全要求较高点建议在服务端进行校验。
+
+**服务端校验：**
+
+* 控制层controller：校验页面请求的参数的合法性。在服务端控制层controller校验，不区分客户端类型。
+* 业务层service（使用较多）：主要校验关键业务参数，仅限于service接口中使用的参数。
+* 持久层dao：一般是不校验的。
+
+<p id="a1"></p>
+
+### :busstop:jsr303环境安装 ###
+
+**添加jar包**
+
+此处使用hibernate-validator实现（版本：hibernate-validator-4.3.0.Final-dist.zip高版本下面举例将不适用），将如下jar包添加到classpath（WEB-INF/lib下即可）：
+
+dist/lib/required/validation-api-1.0.0.GA.jar JSR-303规范API包
+[validation-api-1.0.0.GA.jar](https://github.com/Lumnca/Spring-MVC/blob/master/img/validation-api-1.0.0.GA.jar)
+
+dist/hibernate-validator-4.3.0.Final.jar Hibernate 参考实现
+[hibernate-validator-4.3.0.Final.jar](https://github.com/Lumnca/Spring-MVC/blob/master/img/hibernate-validator-4.3.0.Final.jar)
+
+其余调试包：
+
+[jboss-logging-3.1.0.CR2.jar](https://github.com/Lumnca/Spring-MVC/blob/master/img/jboss-logging-3.1.0.CR2.jar)
+
+**配置文件**
+
+在servlet-xml文件添加如下配置项：
+
+```xml
+    <mvc:annotation-driven/>
+    <bean class="org.springframework.web.servlet.mvc.annotation.AnnotationMethodHandlerAdapter">
+        <property name="webBindingInitializer">
+            <!-- Configures Spring MVC DataBinder instances -->
+            <bean class="org.springframework.web.bind.support.ConfigurableWebBindingInitializer">
+                <property name="validator" ref="validator" />
+            </bean>
+        </property>
+    </bean>
+
+    <!-- Creates the JSR-303 Validator -->
+    <bean id="validator" class="org.springframework.validation.beanvalidation.LocalValidatorFactoryBean" />
+    <bean class="org.springframework.web.servlet.mvc.annotation.AnnotationMethodHandlerAdapter" />
+```
+
+到这里环境配置就完成了，下面就可以使用验证了
+
+<p id="a2"></p>
+
+### :busstop:验证实例 ###
+
+在环境搭好以后，接下来先举一个例子，我们规定用户输入ID和Age，其中ID不能为空，Age只能为1~120：
+
+首先是验证属性的User类：
+
+```java
+package Classes;
+
+import org.hibernate.validator.constraints.NotBlank;
+import org.hibernate.validator.constraints.Range;
+
+import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Size;
+import java.util.Date;
+
+public class User {
+
+   @NotBlank
+   private String id;
+
+   @Range(min = 1,max = 120)
+   private int age;
+   public User(){
+
+   }
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public String getId() {
+        return id;
+    }
+}
+```
+
+可以看到属性上面我们添加@NotBlank注解（非空）与@Range(min = 1,max = 120)注解，范围1~120。像这样添加了验证注解就保证了属性需要按照上面要求。
+
+然后就是在控制器上做验证：
+
+```java
+@Controller
+public class example {
+
+    @RequestMapping(value = "/example")
+    public String index(Model model){
+       model.addAttribute("user",new User());
+        return "login";
+    }
+    @RequestMapping(value = "/login" ,method = RequestMethod.GET)
+    public  String login(@Valid @ModelAttribute  User user,Errors errors, Model model ){
+        if(errors.hasErrors()){
+            return "login";
+        }
+        model.addAttribute("user",user);
+        return "index";
+    }
+}
+```
+
+需要添加@Valid注解才能对开启属性验证。然后就是我们的界面验证与成功界面：
+
+登录界面login：
+
+```jsp
+<body>
+<form:form commandName="user" action="login" method="get">
+    <form:errors path="id" /><br>
+    Name :<form:input path="id"/><br>
+    <form:errors path="age" /><br>
+    Age:<form:input path="age"/><br>
+    <input type="submit" value="提交">
+</form:form>
+</body>
+```
+
+使用errors标签可以显示出错误时候的信息。如果不满足要求将会在此界面继续并显示错误信息。
+
+成功界面index：
+
+```jsp
+  <body>
+      <h2>Name:${user.id}</h2>
+      <h2>Age:${user.age}</h2>
+```
+
+
+
+
+
+
+
+
