--- a/验证器.md
+++ b/验证器.md
@@ -1,8 +1,8 @@
 #  :dragon_face:验证器 #
 
-:arrow_double_down:[jsr303环境安装](a1)
+:arrow_double_down:[jsr303环境安装](#a1)
 
-:arrow_double_down:[验证实例](a2)
+:arrow_double_down:[验证实例](#a2)
 
 前面所说的日期转换也属于验证器，但是它的使用局限，比如数据控制范围，大小，满足的正则表达式。
 
@@ -150,6 +150,11 @@ public class example {
       <h2>Age:${user.age}</h2>
 ```
 
+当输入不满足就会出现以下：
+
+![](https://github.com/Lumnca/Spring-MVC/blob/master/img/a7.png)
+
+当然这是默认的错误信息，我们也可以自定义错误信息。后面我们来介绍更多使用方法。
 
 
 
