--- a/验证器.md
+++ b/验证器.md
@@ -4,6 +4,8 @@
 
 :arrow_double_down:[验证实例](#a2)
 
+:arrow_double_down:[验证选项](#a3)
+
 前面所说的日期转换也属于验证器，但是它的使用局限，比如数据控制范围，大小，满足的正则表达式。
 
 >项目中，通常使用较多的是前端的校验，比如页面中js校验以及form表单使用bootstrap校验。然而对于安全要求较高点建议在服务端进行校验。
@@ -155,6 +157,125 @@ public class example {
 ![](https://github.com/Lumnca/Spring-MVC/blob/master/img/a7.png)
 
 当然这是默认的错误信息，我们也可以自定义错误信息。后面我们来介绍更多使用方法。
+
+
+<p id="a3"></p>
+
+### :busstop:验证选项 ###
+
+除了上面列举的选项外，常见的还有如下选项：
+
+```java
+   @NotBlank 非空约束
+
+   @Pattern(regexp = "//d{8}")  正则表达式约束
+
+   @Length(min = 6,max = 10)  字符串长度约束
+
+   @Range(min = 1,max = 120)  范围约束
+   
+   @Email 邮箱验证
+   
+   @Past 过去时间验证
+   
+   @DateTimeFormat(pattern = "yyyy/MM//dd") 日期格式验证
+```
+
+还有许多验证注解，这里接不一一列出，可以参考文献，有些注解没有默认的错误提示，需要自己设置。使用注解的message可以自定义错误信息。
+
+下面是数据举例：
+
+```java
+public class User {
+
+    @NotBlank(message = "请填写ID")
+    private String id;
+
+    @Pattern(regexp = "//d{8}")
+   private String password;
+
+
+    @DateTimeFormat(pattern = "yyyy/MM//dd")
+   private Date birth;
+
+   @Length(min = 6,max = 10)
+   private String name;
+
+
+   @Range(min = 1,max = 120)
+   private int age;
+   public User(){
+
+   }
+   public User(String _id,String _pw){
+       id = _id;
+       password = _pw;
+   }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public String getId() {
+        return id;
+    }
+
+    public void setPassword(String password) {
+        this.password = password;
+    }
+
+    public String getPassword() {
+        return password;
+    }
+
+    public Date getBirth() {
+        return birth;
+    }
+
+    public void setBirth(Date birth) {
+        this.birth = birth;
+    }
+}
+
+```
+
+再输入界面添加表单：
+
+```java
+<form:form commandName="user" action="login" method="get">
+    <form:errors path="id" /><br>
+    ID :<form:input path="id"/><br>
+    <form:errors path="name" /><br>
+    Name :<form:input path="name"/><br>
+    <form:errors path="age" /><br>
+    Age:<form:input path="age"/><br>
+    <form:errors path="birth" /><br>
+    Email:<form:input path="birth"/><br>
+    <form:errors path="password" /><br>
+    Password:<form:input path="password"/><br>
+    <input type="submit" value="提交">
+</form:form>
+```
+
+
+至此，常用验证器用法内容结束。可以自行试试。
 
 
 
