--- a/上传文件.md
+++ b/上传文件.md
@@ -1,1 +1,121 @@
+# :flags:文件上传 #
+
+在MVC可以使用Apache Commons FileUpload组件上传文件，其中
+
+[Apache Commons FileUpload元件](http://commons.apache.org/proper/commons-fileupload/)  与
+
+[Apache Commons IO](http://commons.apache.org/proper/commons-io/)
+
+都可以免费下载到资源。下载后添加到项目中，如果想上传一个文件就需要一个List<MultipartFile>类型的数据，我们将它包装到类中一起使用：
+
+User 类：
+
+```java
+public class User implements Serializable {
+    private static final long serialVersionUID = 74458L;
+
+    private String id;
+
+    private String password;
+
+    private List<MultipartFile> files;
+
+    public void setFiles(List<MultipartFile> files) {
+        this.files = files;
+    }
+
+    public List<MultipartFile> getFiles() {
+        return files;
+    }
+
+    public String getPassword() {
+        return password;
+    }
+
+    public void setPassword(String password) {
+        this.password = password;
+    }
+
+    public String getId() {
+        return id;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+}
+```
+
+
+然后就是主要的控制器控制上传：
+
+```java
+@Controller
+public class example {
+
+    @RequestMapping(value = "/example")
+    public String index(Model model){
+       model.addAttribute("user",new User());
+        return "login";
+    }
+    @RequestMapping(value = "/login" ,method = RequestMethod.POST)
+    public  String login(@ModelAttribute  User user,Errors errors, Model model,HttpServletRequest request ){
+
+        //获取上传文件流
+        List<MultipartFile> files = user.getFiles();
+
+        //文件存在且大小不为0
+        if(null != files && files.size() > 0){
+            for (MultipartFile mul : files) {
+                 //返回参数的名称
+                String fileName = mul.getOriginalFilename();
+                
+                //获取保存地址
+                File file = new File(request.getServletContext().getRealPath("/files"),fileName);
+
+                try {
+                    //保存目标目录
+                    mul.transferTo(file);
+                }
+                catch (Exception e){
+                    e.printStackTrace();
+                }
+            }
+        }
+        if(errors.hasErrors()){
+            return "login";
+        }
+        model.addAttribute("user",user);
+        return "index";
+    }
+}
+```
+
+上传界面login：
+
+```jsp
+<form:form commandName="user" action="login" method="post" enctype="multipart/form-data" >
+    <form:errors path="id" /><br>
+    ID :<form:input path="id"/><br>
+
+    <form:errors path="password" /><br>
+    Password:<form:input path="password"/><br>
+
+    <input type="file" name="files">
+    <input type="submit" value="提交">
+</form:form>
+```
+
+最后在配置文件中添加：
+
+```xml
+    <bean id="multipartResolver" class="org.springframework.web.multipart.commons.CommonsMultipartResolver">
+        <property name="maxUploadSize" value="2000000"/>
+    </bean>
+```
+
+首先是获取上传文件，表单必须含有enctype="multipart/form-data属性，并且方法必须为post，然后就是input标签为文件上传标签，name属性为上传的名称参数，为了能够上传文件，这里的name必须与User中List<MultipartFile>名称一致，最好上传到的文件也一致。在表单中添加multiple上传添加多个文件。注意一定要有个创建好了的文件夹。操作配置无误后运行即可上传文件。
+
+
+
 
