--- a/上传文件.md
+++ b/上传文件.md
@@ -116,6 +116,8 @@ public class example {
 
 首先是获取上传文件，表单必须含有enctype="multipart/form-data属性，并且方法必须为post，然后就是input标签为文件上传标签，name属性为上传的名称参数，为了能够上传文件，这里的name必须与User中List<MultipartFile>名称一致，最好上传到的文件也一致。在表单中添加multiple上传添加多个文件。注意一定要有个创建好了的文件夹。操作配置无误后运行即可上传文件。
 
+***
 
+### :snowflake:带进度条的文件上传 ###
 
 
